# pool-ghost-rus-frontend

./: .gitignore  Cargo.toml
assets/: style.css
src/: logger.rs  main.rs  pages.rs  parse.rs  serve.rs
systemd-services/: website.service
