[package]
name = "pool-ghost-rus-frontend"
version = "1.0.0"
edition = "2021"

[profile.dev]
strip = true
opt-level = 0
codegen-units = 256
debug = false

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
debug = false

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
axum-client-ip = "0.4.1"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
colored = { version = "2.0.4", features = ["no-color"] }
dioxus = "0.4.0"
dioxus-liveview = { version = "0.4.0", features = ["axum"] }
dioxus-ssr = "0.4.0"
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.28"
humantime = "2.1.0"
log = "0.4.19"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "rt"] }
tower-http = { version = "0.4.3", features = ["fs"] }
